# jlr_modelmonitor_app

./: .gitignore  QUICKSTART.md  README.md  app.py  pyproject.toml  requirements-api.txt  requirements.txt  start-all.sh  start-backend.sh  start-frontend.sh  test_vertex.py  系統架構圖解.md
api/: main.py
dashboard/: __init__.py  analyzer.py  bq_client.py  config.py  extractor.py
data/extracts/: Claude-Sonnet-4-6_extract_v1.0.csv  Claude_Sonnet_4_6_extract_v2.0.csv  claude-sonnet-4-5@20250929_extract_v1.0.csv  gemini-2.0-flash-001_extract_v1.0_part1.csv  gemini-2.0-flash-001_extract_v1.0_part2.csv  gemini-2.5-flash_extract_v1.0_1fa44b93e4e9.csv  gemini-2.5-flash_extract_v1.0_4ef3878ff855.csv  gemini-2.5-pro_extract_v1.0.csv  gemini-3.1-pro-preview_extract_v1.0.csv
data/ground_truth/: ground_truth.csv
frontend/: .gitignore  index.html
frontend/src/: App.tsx  index.css
frontend/src/pages/: AnalyzePage.tsx  DataManagePage.tsx  ExtractPage.tsx  FilesPage.tsx
frontend/src/services/: api.ts
