[project]
name = "llm-accuracy-monitor"
version = "1.0.0"
description = "LLM 萃取準確度監控 Dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pypdf>=3.15.0",
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-storage>=2.10.0",
    "google-genai>=0.2.0",
    "anthropic[vertex]>=0.18.0",
    "json5>=0.9.14",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
